--- a/Index.html
+++ b/Index.html
@@ -36,11 +36,14 @@
 
                     <div id="other_infos">
                         <div>
-                            <h2 class="temp_description">Description</h2>
+
+                            <h2>Description</h2>
                             <p id="temp_description">Ensolarado</p>
+
                         </div>
 
                         <div>
+
                             <h2>Humidity</h2>
                             <p id="humidity">50%</p>
                         </div>
