--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meteo-App</title>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" type="text/css" href="src/style.css" />
 </head>
 
@@ -25,6 +26,7 @@
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="">
 
                     <span id="value">24°C</span>
+
 
 
 
