change h2 - description of place and add some emojis

--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,8 @@
 
                     <span id="value">24°C</span>
 
+                    <p id="description">Ensolarado</p>
+
 
 
 
@@ -34,28 +36,25 @@
             </div>
 
             <div id="other_infos">
-                <div>
 
-                    <h2>Description</h2>
-                    <p id="description">Ensolarado</p>
-
-                </div>
 
                 <div>
 
-                    <h2>Humidity</h2>
+                    <h2>💧 Humidity</h2>
                     <p id="humidity">50%</p>
                 </div>
 
                 <div>
-                    <h2>Wind</h2>
+                    <h2>🌬️ Wind</h2>
                     <p id="wind">50%</p>
                 </div>
 
                 <div>
-                    <h2>Time</h2>
+                    <h2>🕒 Time</h2>
                     <p id="current-date">19:21</p>
                 </div>
+
+
             </div>
 
             <script src="src/app.js">
