--- a/Index.html
+++ b/Index.html
@@ -23,8 +23,9 @@
 
             <div id="infos">
                 <div id="temp">
-                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="">
-
+                    <div id="temp_img"> <img
+                            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" alt="">
+                    </div>
                     <span id="value">24°C</span>
 
                     <p id="description">Ensolarado</p>
