change the text

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                     </div>
                     <span id="value">24°C</span>
 
-                    <p id="description">Ensolarado</p>
+                    <p id="description">clear sky</p>
 
 
 
